@@ -1,3 +1,5 @@
+[B]1.0.18[/B]
+- Forrás változás követése: Client javascript url-jének parse-olása
 [B]1.0.17[/B]
 - Élő adás bugfix
 [B]1.0.16[/B]
